# imfdatapy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  imfdatapy_demo.ipynb  long_tests.py  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  imfdatapy_test.yml
demo/: 1. IMF_IFS.ipynb  Existing_packages_overview.ipynb  Existing_packages_overview_R.Rmd  Existing_packages_overview_R.html  IMF_IFS_GDP_example.ipynb  JSON_RESTful_API_IFS_GDP_example.ipynb  JSON_RESTful_API_methods.ipynb  README.md  demo_change_log_output_folders.ipynb  example.ipynb  imf_ds_api_demo.ipynb  imfdatapy_IFS_GDP_example.ipynb  imfdatapy_architecture.ipynb  imfdatapy_bulk_download.ipynb  imfdatapy_bulk_download.py  imfdatapy_demo.ipynb
demo/mermaid/: example1.md  imfdatapy_architecture_class_diagram.html  imfdatapy_architecture_sequence_diagram.html  imfdatapy_architecture_state_diagram.html  myfile.md
docs/: Makefile  conf.py  demo.md  example.ipynb  index.md  make.bat
docs/demo_md/: imfdatapy_IFS_GDP_example.md  (+3 more)
htmlcov/: d_6dfc78a84f9d69a9_imf_log_py.html  d_6dfc78a84f9d69a9_imf_py.html  d_a44f0ac069e85531_test_afrreo_py.html  d_a44f0ac069e85531_test_bop_py.html  d_a44f0ac069e85531_test_dot_py.html  d_a44f0ac069e85531_test_fsi_py.html  d_a44f0ac069e85531_test_gfsr_py.html  d_a44f0ac069e85531_test_hpdd_py.html  d_a44f0ac069e85531_test_ifs_py.html  d_a44f0ac069e85531_test_imfdata_py.html  index.html  status.json
joss_paper/: README.md  paper.bib  paper.md
my_output_directory/: dim_cl_freq_ifs.csv
src/: __inti__.py  prototype.py
tests/: imfdatapy.py  long_tests.py  test_afrreo.py  test_bop.py  test_dot.py  test_fsi.py  test_gfsr.py  test_hpdd.py  test_ifs.py  test_imf-py.py  test_imf_py.py  test_imfdata.py  test_max_indicator.py
(+25 files in other folders)
