[tool.poetry]
name = "imf_py"
version = "0.1.0"
description = "A package for data extraction from the IMF!"
authors = ["Irina Klein, Sou-Cheng T. Choi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
