[tool.poetry]
name = "imfdatapy"
version = "0.1.5"
description = "A package for data discovery and extraction from the IMF!"
authors = ["Irina Klein, Sou-Cheng T. Choi"]
license = "Apache v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.15, <3.11"
numpy = ">=1.21.6"
pandas = ">=1.3.5"
requests = ">=2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.7.15"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"