[tool.poetry]
name = "imfdatapy"
version = "0.1.1"
description = "A package for data discovery and extraction from the IMF!"
authors = ["Irina Klein, Sou-Cheng T. Choi"]
license = "Apache v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4"
numpy = ">=1.23.5"
pandas = ">=1.5.2"
requests = ">=2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.7"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
python-semantic-release = "^7.33.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"